# api/urls.py
@@ -1,23 +1,24 @@
-from django.urls import include, path
-from django.urls import include, path, re_path
-
-from django.conf import settings
-
+from django.urls import path, re_path
 from . import views
 
 
-_indexable_datasets = []
-for _dataset_name in settings.RELATON_DATASETS:
-    _indexable_datasets.append(_dataset_name)
-
-re_datasets = f'(?P<dataset_name>{"|".join(_indexable_datasets)})'
-
 urlpatterns = [
     path('v1/', views.index, name='api_index'),
-    path('v1/indexers', views.api_list_indexers, name='api_list_indexers'),
-    re_path(f'^v1/indexer/{re_datasets}/run', views.api_run_indexer, name='api_run_indexer'),
-    re_path(f'^v1/indexer/{re_datasets}/stop', views.api_stop_indexer, name='api_stop_indexer'),
-    re_path(f'^v1/indexer/{re_datasets}/reset', views.api_reset_indexer, name='api_reset_indexer'),
-    re_path(f'^v1/indexer/{re_datasets}/status', views.api_indexer_status, name='api_indexer_status'),
-]
 
+    re_path(r'^v1/indexer/(?P<dataset_name>[\w-]+)/run',
+            views.api_run_indexer,
+            name='api_run_indexer'),
+    re_path(r'^v1/indexer/(?P<dataset_name>[\w-]+)/reset',
+            views.api_reset_indexer,
+            name='api_reset_indexer'),
+    re_path(r'^v1/indexer/(?P<dataset_name>[\w-]+)/status',
+            views.api_indexer_status,
+            name='api_indexer_status'),
+
+    re_path(r'^v1/tasks/(?P<task_id>[\w-]+)/stop',
+            views.api_stop_task,
+            name='api_stop_task'),
+    re_path(r'^v1/tasks/stop-all',
+            views.api_stop_all_tasks,
+            name='api_stop_all_tasks'),
+]
